--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,15 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "dom"],
+    "types": ["jest"],
+    "paths": {
+      "@src/*": ["./src/*"],
+      "@env/*": ["./src/environments/*"],
+      "@app/*": ["./src/app/*"],
+      "@unit/*": ["./src/tests/*"],
+      "@styles/*": ["./src/styles/*"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
